tests/snapshots/execution_spec__test-expr-if.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  ifFalse: String
  ifTrue: String
}

schema {
  query: Query
}
