tests/snapshots/execution_spec__test-expr-if.md_query_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "data": {
    "ifFalse": "fail",
    "ifTrue": "pass"
  }
}
