tests/snapshots/execution_spec__test-expr-intersection.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  intersection: [Int]
}

scalar Url

schema {
  query: Query
}
