tests/snapshots/execution_spec__test-expr-intersection.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Query {
  intersection: [Int] @expr(body: {intersection: [{const: [1,2,3]},{const: [3,4,5]}]})
}
