tests/snapshots/execution_spec__test-expr-logic.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  andFalse1: Boolean
  andFalse2: Boolean
  andFalse3: Boolean
  andTrue1: Boolean
  andTrue2: Boolean
  condOne: Int
  condTwo: Int
  condZero: Int
  defaultToTrue: Boolean
  defaultToZero: Int
  ifOne: Int
  ifZero: Int
  isEmptyFalse1: Boolean
  isEmptyFalse2: Boolean
  isEmptyFalse3: Boolean
  isEmptyTrue1: Boolean
  isEmptyTrue2: Boolean
  isEmptyTrue3: Boolean
  isEmptyTrue4: Boolean
  notFalse1: Boolean
  notFalse2: Boolean
  notTrue: Boolean
  orFalse1: Boolean
  orFalse2: Boolean
  orTrue1: Boolean
  orTrue2: Boolean
  orTrue3: Boolean
}

scalar Url

schema {
  query: Query
}
