tests/snapshots/execution_spec__test-expr-math-errors.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "ExprEvalError: \"median can not be zero\"",
        "locations": [
          {
            "line": 1,
            "column": 9
          }
        ]
      }
    ]
  }
}
