tests/snapshots/execution_spec__test-expr-math-errors.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  median_err_negative: Int
  median_err_zero: Int
}

schema {
  query: Query
}
