tests/snapshots/execution_spec__test-expr-math-errors.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Query {
  median_err_negative: Int @expr(body: {median: [{const: -1}, {const: -2}, {const: -3}]})
  median_err_zero: Int @expr(body: {median: [{const: -1}, {const: 0}, {const: 1}]})
}
