tests/snapshots/execution_spec__test-expr-math.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "add": 42.0,
      "subtract": 42.0,
      "multiply": 42.0,
      "mod": 42,
      "div1": 42.0,
      "div2": 42.0,
      "inc": 42.0,
      "dec": 42.0,
      "product": 42.0,
      "sum": 42.0
    }
  }
}
